2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4.1 ========================
	* 

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4 ========================
	* 

2005-08-17  Andreas Kupries <andreask@activestate.com>

	* swaplist.man:
	* swaplist.tcl: Added the missing dependency on Tk.

2005-04-01  Andreas Kupries <andreask@activestate.com>

	* swaplist.man: Fixed typo in heading, a reference to
	  'getstring'. Also made the list of options a true list.

2005-03-31 Aaron Faupell <afaupell@users.sourceforge.net>

	* initial import