@@ -9,5 +9,5 @@
 # full path name of this file's directory.
 
 if { ![package vsatisfies [package provide Tcl] 8.4] } { return }
-package ifneeded swaplist 0.1 [list source [file join $dir swaplist.tcl]]
+package ifneeded swaplist 0.2 [list source [file join $dir swaplist.tcl]]
 
