@@ -1,3 +1,8 @@
+2008-02-06 Aaron Faupell <afaupell@users.sourceforge.net>
+
+	* swaplist.tcl: fix for bug when moving last item to the
+	right when -reorder is 0. increment version
+
 2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
